[tool.poetry]
name = "wolflinker"
version = "0.1.0"
description = ""
authors = ["Sam Wolfson <terabyte128@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.79.0"}
tinydb = "^4.7.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
